--- a/src/app/components/core/framed-layout/framed-layout.component.html
+++ b/src/app/components/core/framed-layout/framed-layout.component.html
@@ -15,6 +15,7 @@
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
         <div class="dropdown-header text-center"><strong>Account</strong></div>
         <a class="dropdown-item" href="javascript:void(0)" (click)="onLogout()"><i class="fa fa-lock"></i> Logout</a>
+        <a class="dropdown-item" href="javascript:void(0)"><i class="fa fa-user"></i> Profile</a>
       </div>
     </li>
   </ul>
