--- a/src/app/core/framed-layout/framed-layout.component.html
+++ b/src/app/core/framed-layout/framed-layout.component.html
@@ -50,5 +50,5 @@
 </div>
 <app-footer>
   <span><a href="https://rent.cu">RENT.CU</a> &copy; 2019.</span>
-  <span class="ml-auto">Powered by <a href="https://coreui.io/angular">CoreUI for Angular</a></span>
+  <span class="ml-auto">Powered by <a href="http://rent.cu">RENT.CUr</a></span>
 </app-footer>
