Add profile editing features and fix css en some views

--- a/src/app/shared/owner-card/owner-card.component.html
+++ b/src/app/shared/owner-card/owner-card.component.html
@@ -5,8 +5,9 @@
       <img src="../../../assets/img/avatars/standard_user-512.png" class="img-avatar"/>
     </div>
   </div>
-  <div class="card-body manager-info">
-    <div><b>{{owner.name}} </b></div>
-    <div>{{owner.email}}</div>
+  <div class="card-body">
+    <b>{{owner.name}}</b>
+    <br/>
+    {{owner.email}}
   </div>
 </div>
