--- a/src/app/shared/owner-card/owner-card.component.scss
+++ b/src/app/shared/owner-card/owner-card.component.scss
@@ -9,9 +9,10 @@
   }
 }
 
-.manager-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0.5rem;
+.card-body {
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
 }
