--- a/src/app/views/houses/houses-add-edit/houses-add-edit.component.scss
+++ b/src/app/views/houses/houses-add-edit/houses-add-edit.component.scss
@@ -55,3 +55,7 @@
     vertical-align: middle !important;
   }
 }
+
+#houseImagesGallery {
+  background-image: linear-gradient(to top, #CAE2AA 10%, #ECF4E0 92%) !important;
+}
