--- a/src/app/views/houses/houses-add-edit/houses-add-edit.component.html
+++ b/src/app/views/houses/houses-add-edit/houses-add-edit.component.html
@@ -280,8 +280,13 @@
                   </table>
                 </tab>
                 <tab heading="Images" *ngIf="houseId">
+                  <div class="row">
                   <div class="col-md-5">
-                    <app-image-upload></app-image-upload>
+                    <app-image-upload [houseId]="houseId"></app-image-upload>
+                  </div>
+                  <div class="col-md-7">
+                    <gallery id="houseImagesGallery" [items]="images$ | async"></gallery>
+                  </div>
                   </div>
                 </tab>
               </tabset>
