Fix gallery component for uploaded images

--- a/src/app/shared/house-card/house-card.component.html
+++ b/src/app/shared/house-card/house-card.component.html
@@ -2,7 +2,7 @@
   <div class="card-header">
     <div style="text-align: center">House</div>
     <div class="avatar-container">
-      <img [src]="environmentUris.image + '/' + house.path" class="img-avatar" alt="admin@bootstrapmaster.com"/>
+      <img [src]="environmentUris.image + '/main/homestay' + house.path" class="img-avatar" alt="admin@bootstrapmaster.com"/>
     </div>
   </div>
   <div class="card-body house-info">
